--- a/tobb-react/package.json
+++ b/tobb-react/package.json
@@ -2,7 +2,7 @@
   "name": "tobb-react",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://kubilaykerim.github.io/tobb/",
+  "homepage": "https://kubilaykerim.github.io/tobb/tobb-react",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -30,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
