--- a/tobb-react/package.json
+++ b/tobb-react/package.json
@@ -2,7 +2,7 @@
   "name": "tobb-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kubilaykerim.github.io/tobb/tobb-react",
+  "homepage": "./",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
